--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,8 +7,12 @@
     width: 100%;
     object-fit: cover;
 }
-
 .form-edit .profile-edit {
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+}
+.card .card-body .profile-edit-customer {
     width: 120px;
     height: 120px;
     object-fit: cover;
@@ -17,33 +21,94 @@
     width: 50%;
     object-fit: cover;
 }
-
 .navbar .navbar-nav .img-profile {
     object-fit: cover;
 }
-
-/* Ini Style Untuk Side Bar */
+.navbar .navbar-nav .customer-profile {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+} /* Ini Style Untuk Side Bar */
 .sidebar {
     background-color: #333333;
 }
-
 .sidebar .nav-link:hover,
 .sidebar .nav-link:hover i {
     color: #ffb22c !important;
 }
-
 .sidebar .nav-link,
 .sidebar .nav-link i {
     color: #ffffff !important;
 }
-
 .sidebar .nav-item .nav-link.active {
     color: #ffb22c !important;
 }
 .sidebar .nav-item .nav-link.active i {
     color: #ffb22c !important;
 }
-
 .sidebar-divider {
     background-color: #777777 !important;
+} /* STYLE CUSTOMER */
+.navbar .logo {
+    color: #999999;
+}
+.navbar .btn-register {
+    background-color: #333333;
+}
+.register-bg {
+    position: relative;
+    background-image: url("/assets/background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    z-index: 1;
+}
+.register-bg::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8); /* opacity putih 40% */
+    z-index: -1; /* berada di belakang isi */
+}
+.container .card {
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(2px);
+}
+.bg-admin-login {
+    position: relative;
+    background-image: url("/assets/background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    z-index: 1;
+}
+.bg-admin-login::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8); /* opacity putih 40% */
+    z-index: -1; /* berada di belakang isi */
+}
+.main-section-index {
+    padding-top: 20rem;
+    background:
+        linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1)),
+        url("../assets/home-image.jpg") center/cover no-repeat;
+}
+.title {
+    font-family: "Roboto";
+    color: #555555;
+}
+.foto-lapangan-index {
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
 }
