--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,6 +75,7 @@
     z-index: -1; /* berada di belakang isi */
 }
 .container .card {
+    margin-top: 3rem;
     background-color: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(2px);
 }
@@ -97,6 +98,7 @@
     background: rgba(255, 255, 255, 0.8); /* opacity putih 40% */
     z-index: -1; /* berada di belakang isi */
 }
+
 .main-section-index {
     padding-top: 20rem;
     background:
