--- a/public/css/style.css
+++ b/public/css/style.css
@@ -318,3 +318,10 @@
     border-color: #ffb22c;
     box-shadow: 0 0 0 0.2rem rgba(255, 178, 44, 0.25);
 }
+
+.booking-jam-item.booked {
+    background-color: #f8d7da;
+    color: #842029;
+    cursor: not-allowed;
+    opacity: 0.7;
+}
