--- a/public/css/style.css
+++ b/public/css/style.css
@@ -325,3 +325,12 @@
     cursor: not-allowed;
     opacity: 0.7;
 }
+
+.modal .modal-body .modal-bukti-pembayaran {
+    width: 100%;
+    object-fit: cover;
+}
+
+.table-riwayat {
+    margin-top: 130px;
+}
